5.2.3
-----
1. In mobile layout, if queue is cleared then switch to browse view.
2. Take top/bottom padding into account in more places.
3. Add "npAutoClose=false" URL query parameter to stop now-playing
   auto-close when no tracks.

5.2.2
-----
1. When offer to un-pin start-mix from home screen via 'Random Mix' dialog
   then use displayed text of home screen item.
2. For LMS9.0 when click on queue/now-playing 'Random Mix' icon show start-mix
   dialog.
3. Fix mix types - these don't end in 's', i.e. 'track' not 'tracks'
4. If no name entered into 'Random Mix' dialog then save should just update
   current settings.
5. Only allow 'Play now' action for random mixes.
6. Handle renaming of random mixes.
7. If using whole view for now-playing background and using wide desktop
   layout, then place cover vertically in the middle.
8. Fix MAI height when using bottom padding and replacing navigation bar.

5.2.1
-----
1. Fix permissions of Hungarian translations file.
2. Rename Hungarian translation files from "hu-hu" to "hu"
3. Try to ensure random mixes have "safe" names by replacing any question mark,
   less/greater than, back/forward slashes, colon, or asterisk characters with
   underscores, and removing any semi-colon, single/double quote, tab, or
   new-line characters.
4. Fix empty home screen if random mix pinned and showing a list.
5. Add menu to 'Random Mix' dialog with option to pin start-mix dialog to home
   screen.

5.2.0
-----
 1. Add support for LMS 9.0 user defined roles.
 2. Allow to save 'Random Mix' configs for later use, and list these when open
    'Random Mix'.
 3. Remove 'Stop' button from 'Random Mix' dialog, as can be stopped elsewhere.
 4. Allow 'Random mixes' to be pinned to home screen.
 5. Add option to use full page for now-playing backdrop, i.e. extend into top
    toolbar and (on mobile) bottom navigation bar.
 6. Add slight shadow to now-playing image.
 7. On desktop layout auto-switch to now-playing when use 'Play now' action, as