@@ -382,19 +382,6 @@
  background-color:var(--pbar-bgnd)!important;
 }
 
-.np-bar-colored {
- background-color:var(--pbar-colored-bgnd)!important;
-}
-
-.np-bar-colored .primary, .no-liveedge .np-bar-colored .v-progress-linear__background  {
- background-color:var(--bottom-position-slider-color)!important;
- border-color:var(--bottom-position-slider-color)!important;
-}
-
-.no-liveedge .np-bar-colored {
- background-color:transparent!important;
-}
-
 .np-bar .np-playpause {
  margin-top:-3px!important;
 }
